--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,19 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+*.idea/**/workspace.xml
+*.idea/**/tasks.xml
+*.idea/**/usage.statistics.xml
+*.idea/**/dictionaries
+*.idea/**/shelf
+
 # AWS User-specific
 .idea/**/aws.xml
+*.idea/**/aws.xml
 
 # Generated files
 .idea/**/contentModel.xml
+*.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -28,9 +36,20 @@
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+*.idea/**/dataSources/
+*.idea/**/dataSources.ids
+*.idea/**/dataSources.local.xml
+*.idea/**/sqlDataSources.xml
+*.idea/**/dynamic.xml
+*.idea/**/uiDesigner.xml
+*.idea/**/dbnavigator.xml
+
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+
+*.idea/**/gradle.xml
+*.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -85,7 +104,10 @@ fabric.properties
 # Ignores the whole .idea folder and all .iml files
 # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
+.idea
 .idea/*
+*.idea/
+*.idea/*
 
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
